--- a/blog_app/static/css/output.css
+++ b/blog_app/static/css/output.css
@@ -664,6 +664,10 @@ video {
   border-width: 1px;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
