--- a/blog_app/templates/base.html
+++ b/blog_app/templates/base.html
@@ -1,4 +1,4 @@
-{% load compress %} {% load static %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,11 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Django + Tailwind CSS</title>
-
-    {% compress css %}
-    <link rel="stylesheet" href="{% static 'css/output.css' %}" />
-    {% endcompress %}
+    <title>Blogify | {% block title %} {% endblock title %}</title>
+    {% include "./dependancies/css.html" %}
   </head>
 
   <body>
