--- a/blog_app/templates/base.html
+++ b/blog_app/templates/base.html
@@ -2,17 +2,24 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blogify | {% block title %} {% endblock title %}</title>
-    {% include "./dependancies/css.html" %}
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blogify | {% block title %} {% endblock title %}</title>
+  {% include "./dependancies/css.html" %}
+</head>
+
+<body>
+  {% include "./components/navbar.html" %}
+  <div class="flex">
+    {% include './components/sidebar.html' %}
     <div>
       {% block content %} {% endblock content %}
     </div>
-  </body>
+  </div>
+  {% include "./components/footer.html" %}
+</body>
+
 </html>
