--- a/blog_app/templates/blogs/blog_list.html
+++ b/blog_app/templates/blogs/blog_list.html
@@ -1,10 +1,18 @@
-{% extends './../base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-<h1>Blog List</h1>
-<ul>
-  {% for blog in blogs %}
-  <li><a href="{% url 'blogs:blog-detail' blog.slug %}">{{ blog.title }}</a></li>
-  {% endfor %}
-</ul>
-{% endblock content %}
+  <h1>All Blogs</h1>
+  <ul>
+    {% for blog in blogs %}
+      <li>
+        <img src="{{ blog.image.url }}" alt="{{ blog.title }}">
+        <a href="{% url 'blogs:blog-detail' blog.slug %}">{{ blog.title }}</a>
+        <ul>
+          {% for comment in blog.first_three_comments %}
+            <li>{{ comment.content }}</li>
+          {% endfor %}
+        </ul>
+      </li>
+    {% endfor %}
+  </ul>
+{% endblock %}
