--- a/blog_app/templates/components/sidebar.html
+++ b/blog_app/templates/components/sidebar.html
@@ -7,19 +7,19 @@
                     Blog</a>
             </li>
             <li>
-                <a href="#"
+                <a href=""
                     class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">My 
                     Blogs</a>
             </li>
             <li>
-                <a href="#"
+                <a href="{% url 'users:profile' %}"
                     class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">My
                     Profile</a>
             </li>
         </ul>
     </div>
     <div class="p-6">
-        <h2 class="text-white text-xl font-semibold mb-4">Categories</h2>
+        <h2 class="text-white text-xl font-semibold mb-4">Tags</h2>
         <ul class="space-y-2">
             <li><a href="#" class="text-gray-300 hover:text-white">Technology</a></li>
             <li><a href="#" class="text-gray-300 hover:text-white">Travel</a></li>
