--- a/blog_app/templates/blogs/blog_form.html
+++ b/blog_app/templates/blogs/blog_form.html
@@ -5,6 +5,7 @@
 <form action="" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
+  {{ form.media }}
   <button type="submit">Save</button>
 </form>
 {% endblock content %}
