--- a/blog_app/templates/components/sidebar.html
+++ b/blog_app/templates/components/sidebar.html
@@ -2,7 +2,7 @@
     <div class="mt-6">
         <ul class="flex flex-col space-y-2">
             <li>
-                <a href="#"
+                <a href="{% url 'blogs:blog-create' %}"
                     class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">Create a
                     Blog</a>
             </li>
