--- a/blog_app/templates/components/sidebar.html
+++ b/blog_app/templates/components/sidebar.html
@@ -7,7 +7,7 @@
                     Blog</a>
             </li>
             <li>
-                <a href=""
+                <a href="{% url 'users:my-blogs' %}"
                     class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">My 
                     Blogs</a>
             </li>
