--- a/blog_app/templates/components/navbar.html
+++ b/blog_app/templates/components/navbar.html
@@ -2,9 +2,9 @@
 
 <nav class="bg-gray-800 py-4">
     <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-        <img class="w-20" src="{% static 'img/logo.png' %}" alt="">
+        <a href="{% url 'core:home' %}"><img class="w-20" src="{% static 'img/logo.png' %}" alt=""></a>
         <div class="flex space-x-4">
-            <a href="#" class="text-white hover:text-gray-300">Home</a>
+            <a href="{% url 'core:home' %}" class="text-white hover:text-gray-300">Home</a>
             <a href="#" class="text-white hover:text-gray-300">Discover</a>
 
         </div>
