--- a/blog_app/templates/core/index.html
+++ b/blog_app/templates/core/index.html
@@ -1,7 +1,28 @@
-{% extends './../base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-
-
-<h1>WELCOME {{request.user}}</h1>
-{% endblock content %}
+<div class="container mx-auto px-4 py-8">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        {% for blog in blogs %}
+        <a href="{% url 'blogs:blog-detail' blog.slug %}" class="block">
+            <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                <img class="w-50 h-auto" src="{{ blog.image.url }}" alt="{{ blog.title }}">
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2">{{ blog.title }}</div>
+                    <p class="text-gray-700 text-base">{{ blog.content|safe|linebreaksbr }}</p>
+                </div>
+                <div class="px-6 pt-4 pb-2">
+                    <ul>
+                        {% for tag in blog.tags.all %}
+                        <li
+                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">
+                            #{{ tag.name }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </a>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
