--- a/blog_app/templates/blogs/blog_detail.html
+++ b/blog_app/templates/blogs/blog_detail.html
@@ -2,13 +2,18 @@
 
 {% block content %}
     <h1>{{ blog.title }}</h1>
-    <p>{{ blog.content }}</p>
+    <!-- Use safe filter to render rich text content -->
+    <div>{{ blog.content | safe }}</div>
     <img src="{{ blog.image.url }}" alt="{{ blog.title }}">
     <p>Author: {{ blog.author }}</p>
     <p>Created At: {{ blog.created_at }}</p>
     <p>Updated At: {{ blog.updated_at }}</p>
-    <a href="{% url 'blogs:blog-update' blog.slug %}">Edit</a>
-    <a href="{% url 'blogs:blog-delete' blog.slug %}">Delete</a>
+    
+    {% if request.user == blog.author %}
+        <a href="{% url 'blogs:blog-update' blog.slug %}">Edit</a>
+        <a href="{% url 'blogs:blog-delete' blog.slug %}">Delete</a>
+    {% endif %}
+    
     <form action="{% url 'blogs:comment-create' blog.slug %}" method="post">
         {% csrf_token %}
         <textarea name="content"></textarea>
