--- a/blog_app/templates/components/navbar.html
+++ b/blog_app/templates/components/navbar.html
@@ -14,7 +14,7 @@
                     Logout
                 </button>
             </form>
-            <a href="#" class="text-white hover:text-gray-300">Profile</a>
+            <a href="{% url 'users:profile' %}" class="text-white hover:text-gray-300">Profile</a>
         </div>
     </div>
 </nav>
