--- a/blog_app/templates/components/sidebar.html
+++ b/blog_app/templates/components/sidebar.html
@@ -3,17 +3,17 @@
         <ul class="flex flex-col space-y-2">
             <li>
                 <a href="{% url 'blogs:blog-create' %}"
-                    class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">Create a
+                    class="text-gray-300 hover:text-white">Create a
                     Blog</a>
             </li>
             <li>
                 <a href="{% url 'users:my-blogs' %}"
-                    class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">My 
+                    class="text-gray-300 hover:text-white">My 
                     Blogs</a>
             </li>
             <li>
                 <a href="{% url 'users:profile' %}"
-                    class="text-gray-300 hover:text-white py-2 px-4 rounded-full bg-gray-700 hover:bg-gray-600">My
+                    class="text-gray-300 hover:text-white">My
                     Profile</a>
             </li>
         </ul>
