--- a/blog_app/templates/blogs/blog_detail.html
+++ b/blog_app/templates/blogs/blog_detail.html
@@ -8,18 +8,21 @@
         <img src="{{ blog.image.url }}" alt="{{ blog.title }}" class="max-w-md">
     </div>
     <div>
-        <p class="text-gray-600">Author: {{ blog.author }}</p>
-        <p class="text-gray-600">Created At: {{ blog.created_at }}</p>
-        <p class="text-gray-600">Updated At: {{ blog.updated_at }}</p>
+        <div>
+            <p class="text-gray-600">Author: {{ blog.author }}</p>
+            <p class="text-gray-600">Created At: {{ blog.created_at }}</p>
+            <p class="text-gray-600">Updated At: {{ blog.updated_at }}</p>
+        </div>
+        <div>
+            {% if request.user == blog.author %}
+            <div class="mb-4">
+                <a href="{% url 'blogs:blog-update' blog.slug %}" class="mr-2 text-blue-500">Edit</a>
+                <a href="{% url 'blogs:blog-delete' blog.slug %}" class="text-red-500">Delete</a>
+            </div>
+            {% endif %}
+        </div>
     </div>
 </div>
-
-{% if request.user == blog.author %}
-<div class="mb-4">
-    <a href="{% url 'blogs:blog-update' blog.slug %}" class="mr-2 text-blue-500">Edit</a>
-    <a href="{% url 'blogs:blog-delete' blog.slug %}" class="text-red-500">Delete</a>
-</div>
-{% endif %}
 
 <div>
     {{ blog.content | safe }}
