--- a/blog_app/templates/blogs/blog_form.html
+++ b/blog_app/templates/blogs/blog_form.html
@@ -1,11 +1,33 @@
 {% extends './../base.html' %}
 
 {% block content %}
-<h1>Create/Update Blog</h1>
-<form action="" method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {{ form.media }}
-  <button type="submit">Save</button>
-</form>
+<div class="min-h-screen mb-4 flex items-center justify-center bg-gray-100">
+    <form action="" method="post" enctype="multipart/form-data" class="w-full p-8 bg-white rounded shadow-md">
+        {% csrf_token %}
+        {{ form.media }}
+        <h1 class="text-3xl font-bold mb-8 text-center">Create/Update Blog</h1>
+        <div class="mb-4">
+            {{ form.title.label_tag }}
+            {{ form.title }}
+            {% if form.title.errors %}
+            <p class="text-red-500">{{ form.title.errors }}</p>
+            {% endif %}
+        </div>
+        <div class="mb-4">
+            {{ form.content.label_tag }}
+            {{ form.content }}
+            {% if form.content.errors %}
+            <p class="text-red-500">{{ form.content.errors }}</p>
+            {% endif %}
+        </div>
+        <div class="mb-4">
+            {{ form.image.label_tag }}
+            {{ form.image }}
+            {% if form.image.errors %}
+            <p class="text-red-500">{{ form.image.errors }}</p>
+            {% endif %}
+        </div>
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Save</button>
+    </form>
+</div>
 {% endblock content %}
