--- a/blog_app/templates/components/sidebar.html
+++ b/blog_app/templates/components/sidebar.html
@@ -1,4 +1,4 @@
-<section class="bg-gray-800 w-64 max-h-screen m-3 rounded-xl">
+<section class="bg-gray-800 w-64 max-h-screen m-3 rounded-xl p-2">
     <div class="mt-6">
         <ul class="flex flex-col space-y-2">
             <li>
