--- a/blog_app/templates/core/index.html
+++ b/blog_app/templates/core/index.html
@@ -6,11 +6,20 @@
         {% for blog in blogs %}
         <a href="{% url 'blogs:blog-detail' blog.slug %}" class="block">
             <div class="max-w-sm rounded overflow-hidden shadow-lg">
-                <img class="w-50 h-auto" src="{{ blog.image.url }}" alt="{{ blog.title }}">
-                <div class="px-6 py-4">
-                    <div class="font-bold text-xl mb-2">{{ blog.title }}</div>
-                    <p class="text-gray-700 text-base">{{ blog.content|safe|linebreaksbr }}</p>
+                <div class="px-6 py-4 overflow-hidden h-52">
+                    <div class="flex">
+                        <div>
+                            <img class="w-24 h-auto" src="{{ blog.image.url }}" alt="{{ blog.title }}">
+                        </div>
+                        <div>
+                            <div class="font-bold text-xl mb-2">{{ blog.title }}</div>
+                            <p class="text-gray-600 text-sm mt-2">Author: {{ blog.author }}</p>
+                            <p class="text-gray-600 text-sm">Published: {{ blog.created_at }}</p>
+                            <p class="text-gray-700 text-base">{{ blog.content|safe|linebreaksbr }}</p>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="px-6 pt-4 pb-2">
                     <ul>
                         {% for tag in blog.tags.all %}
