--- a/blog_app/templates/registration/reg_base.html
+++ b/blog_app/templates/registration/reg_base.html
@@ -1,8 +1,7 @@
 <html>
   <head>
-    <title>Blogify</title>
+    <title>Blogify | {% block title %}{% endblock title %}</title>
     {% include "./../dependancies/css.html" %}
-
   </head>
   <body>
     {% block content %} {% endblock content %}
