--- a/blog_app/templates/blogs/blog_form.html
+++ b/blog_app/templates/blogs/blog_form.html
@@ -1,5 +1,12 @@
 {% extends './../base.html' %}
 
+
+
+{% block title %}
+New
+{% endblock title %}
+
+
 {% block content %}
 <div class="min-h-screen mb-4 flex items-center justify-center bg-gray-100">
     <form action="" method="post" enctype="multipart/form-data" class="w-full p-8 bg-white rounded shadow-md">
