--- a/blog_app/templates/blogs/my_blogs.html
+++ b/blog_app/templates/blogs/my_blogs.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
+
+
+{% block title %}
+Mine
+{% endblock title %}
+
+
 {% block content %}
 <div class="container mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold mb-8">Your Blogs</h1>
@@ -13,7 +20,7 @@
                 <div class="flex justify-between">
                     <a href="{% url 'blogs:blog-update' blog.slug %}"
                         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit</a>
-                        <a href="{% url 'blogs:blog-delete' blog.slug %}">Delete</a>
+                    <a href="{% url 'blogs:blog-delete' blog.slug %}">Delete</a>
                 </div>
             </div>
         </div>
