--- a/blog_app/templates/core/index.html
+++ b/blog_app/templates/core/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
+
+
+{% block title %}
+Home
+{% endblock title %}
+
+
 {% block content %}
 <div class="container mx-auto px-4 py-8">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
