--- a/blog_app/templates/blogs/blog_form.html
+++ b/blog_app/templates/blogs/blog_form.html
@@ -1,11 +1,8 @@
 {% extends './../base.html' %}
 
-
-
 {% block title %}
 New
 {% endblock title %}
-
 
 {% block content %}
 <div class="min-h-screen mb-4 flex items-center justify-center bg-gray-100">
@@ -14,8 +11,12 @@ New
         {{ form.media }}
         <h1 class="text-3xl font-bold mb-8 text-center">Create/Update Blog</h1>
         <div class="mb-4">
-            {{ form.title.label_tag }}
-            {{ form.title }}
+            <div class="flex">
+                {{ form.title.label_tag }}
+                <div class="border-2 w-fit">
+                    {{ form.title }}
+                </div>
+            </div>
             {% if form.title.errors %}
             <p class="text-red-500">{{ form.title.errors }}</p>
             {% endif %}
