finish site project

--- a/blog_app/templates/blogs/blog_detail.html
+++ b/blog_app/templates/blogs/blog_detail.html
@@ -1,5 +1,12 @@
 {% extends './../base.html' %}
 
+
+
+{% block title %}
+{{blog.title}}
+{% endblock title %}
+
+
 {% block content %}
 <h1 class="text-3xl font-bold mb-4">{{ blog.title }}</h1>
 
