--- a/blog_app/templates/blogs/my_blogs.html
+++ b/blog_app/templates/blogs/my_blogs.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 
 {% block title %}
@@ -9,7 +9,7 @@ Mine
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
-    <h1 class="text-3xl font-bold mb-8">Your Blogs</h1>
+    <h1 class="text-3xl font-bold mb-8">Blogs Authored By You</h1>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
         {% for blog in user_blogs %}
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
@@ -22,6 +22,13 @@ Mine
                         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit</a>
                     <a href="{% url 'blogs:blog-delete' blog.slug %}">Delete</a>
                 </div>
+            </div>
+        </div>
+        {% empty %}
+        <div class="flex items-center justify-center w-full h-full bg-gray-100">
+            <div class="text-center">
+                <p class="text-gray-600">Nothing here yet</p>
+                <img class="w-64 h-auto mt-4 mx-auto" src="{% static 'img/nothing.png' %}" alt="nothing">
             </div>
         </div>
         {% endfor %}
