allow user to input the city

--- a/weather_app/templates/base.html
+++ b/weather_app/templates/base.html
@@ -8,7 +8,7 @@
     {% include './dependancies/css.html' %}
   </head>
 
-  <body>
+  <body class="bg-orange-500">
     <div>
       {% block content %} {% endblock content %}
     </div>
